syntax = "proto3";
package match;
option go_package = "./pb";

message GetDepthReq{
  //交易对
  string symbol=1;
  //档位
  int32  level =2;
}
message GetDepthResp{
  //订单簿版本
  int64 version=1;
  message Position{
    //数量
    string qty=1;
    //价格
    string price=2;
    //金额
    string amount=3;
  }
  //卖盘
  repeated  Position asks=2;
  //买盘
  repeated  Position bids=3;
}
message GetTickReq{
  //交易对
  string symbol=1;
  //多少条
  int32 limit=2;
}
message GetTickResp{
  message Tick{
    //价格
    string price=1;
    //数量
    string qty=2;
    //金额
    string amount=3;
    //时间
    int64 timestamp=4;
    //交易对
    string symbol=5;
    //taker是否是买单
    bool  taker_is_buyer=6;
  }
  repeated Tick tick_list=1;
}
message GetTickerReq{
  //交易对
  string symbol=1;
}
message GetTickerResp{
  message Ticker{
    //最新价
    string latest_price =1;
    //高
    string high=2;
    //低
    string low=3;
    //成交额 计价币数量
    string volume=5;
    //成交量 基础币数量
    string amount=6;
    //涨跌幅
    string price_range=7;
    //24小时前的价格
    string last24_price=8;
    //交易对
    string  symbol =9;

  }
  repeated Ticker ticker_list=1;
}

service MatchService {
  //获取深度
  rpc GetDepth(GetDepthReq)returns(GetDepthResp);
  //获取tick实时成交
  rpc GetTick(GetTickReq)returns(GetTickResp);
  //获取ticker
  rpc GetTicker(GetTickerReq)returns(GetTickerResp);
}